--- a/composer.json
+++ b/composer.json
@@ -62,35 +62,34 @@
     }
   ],
   "require": {
-    "php": ">=7.0.8",
-    "moodlehq/moodle-cs": "^3.2.3",
+    "php": ">=7.4",
+    "moodlehq/moodle-cs": "^3.2.4",
     "moodlehq/moodle-local_ci": "^1.0.17",
     "moodlehq/moodle-local_moodlecheck": "^1.1.3",
-    "sebastian/phpcpd": "^3.0",
-    "sebastian/version": "^2.0.1",
-    "phpmd/phpmd": "^2.2",
-    "symfony/dotenv": "^3.4",
-    "symfony/filesystem": "^3.4",
-    "symfony/finder": "^3.4",
-    "symfony/console": "^3.4",
-    "symfony/yaml": "^3.4",
-    "symfony/process": "^3.4",
-    "php-parallel-lint/php-parallel-lint": "^1.2.0",
-    "php-parallel-lint/php-console-highlighter": "^0.5",
-    "psr/log": "^1.0",
-    "nikic/php-parser": "^4.0",
-    "stecman/symfony-console-completion": "^0.7.0",
-    "marcj/topsort": "^1.0",
-    "padraic/phar-updater": "^1.0",
-    "phpcompatibility/php-compatibility": "dev-develop#2fb82334"
+    "sebastian/phpcpd": "^6.0.3",
+    "sebastian/version": "^3.0.2",
+    "phpunit/php-timer": "^5.0.3",
+    "phpmd/phpmd": "^2.12",
+    "symfony/dotenv": "^5.4",
+    "symfony/filesystem": "^5.4",
+    "symfony/finder": "^5.4",
+    "symfony/console": "^5.4",
+    "symfony/yaml": "^5.4",
+    "symfony/process": "^5.4",
+    "php-parallel-lint/php-parallel-lint": "^1.3.2",
+    "php-parallel-lint/php-console-highlighter": "^1.0.0",
+    "psr/log": "^1.1.4",
+    "nikic/php-parser": "^4.14",
+    "stecman/symfony-console-completion": "^0.11.0",
+    "marcj/topsort": "^2.0.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^6.5",
-    "mockery/mockery": "^1.3"
+    "phpunit/phpunit": "^9.5",
+    "mockery/mockery": "^1.5.0"
   },
   "config": {
     "platform": {
-      "php": "7.0.8"
+      "php": "7.4.0"
     },
     "allow-plugins": {
       "dealerdirect/phpcodesniffer-composer-installer": true
