Move from removed ProcessBuilder to Process
The main change in this commit is the replacement of
Symfony\Component\Process\ProcessBuilder by the direct
use of  Symfony\Component\Process\Process instead.

The Symfony\Component\Process\ProcessBuilder class was
deprecated in Symfony 3.4 and removed in 4.0.

This is a huge change because we were relying on the, now
removed class, near everywhere.

At the same time, adjust all tests to work with PHPUnit 9,
add param and return types and other small details.

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<phpunit bootstrap="vendor/autoload.php" colors="true">
-    <testsuites>
-        <testsuite name="Test Suite">
-            <directory suffix="Test.php">./tests/</directory>
-        </testsuite>
-    </testsuites>
-
-    <!-- Whitelist for code coverage -->
-    <filter>
-        <whitelist>
-            <directory suffix=".php">./src/</directory>
-        </whitelist>
-    </filter>
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" bootstrap="vendor/autoload.php" colors="true" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd">
+  <testsuites>
+    <testsuite name="Test Suite">
+      <directory suffix="Test.php">./tests/</directory>
+    </testsuite>
+  </testsuites>
+  <!-- Whitelist for code coverage -->
+  <coverage>
+    <include>
+      <directory suffix=".php">./src/</directory>
+    </include>
+  </coverage>
 </phpunit>
