Add 401_STABLE to tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -79,6 +79,8 @@ jobs:
     - php: 7.4
       env: MOODLE_BRANCH=MOODLE_400_STABLE
     - php: 7.4
+      env: MOODLE_BRANCH=MOODLE_401_STABLE
+    - php: 7.4
       env: MOODLE_BRANCH=MOODLE_400_STABLE
     - php: 7.4
       env: MOODLE_BRANCH=MOODLE_311_STABLE
