--- a/composer.json
+++ b/composer.json
@@ -86,7 +86,8 @@
   "require-dev": {
     "phpunit/phpunit": "^9.5",
     "mockery/mockery": "^1.5.0",
-    "friendsofphp/php-cs-fixer": "3.4.0"
+    "friendsofphp/php-cs-fixer": "^3.4.0",
+    "vimeo/psalm": "^5.4.0"
   },
   "config": {
     "platform": {
