TW20176364 Merge latest moodle-plugin-ci (3.4.3). (#2)
* Bump to codechecker v3.1.0

* Remove tests using PHPUnit 6.5 to avoid 'cover' annotation issues.

* Prepare for 3.2.5 release

* Allow to specify --fail-on-warning for the phpunit

* Remove .phpcs.xml files immediately after creating it

moodle-plugin-ci is not ready for this yet. We need to move
from current use of local_codechecker to composer + moodle-cs
before being able to allow these new .phpcs.xml files in core.

So, for now, we are just deleting it as part of the tool
installation. This will be revisited when moving to the
new approach commented above.

Co-authored-by: Jonathan Champ <jrchamp@ncsu.edu>

* Prepare for 3.2.6 release

* Add 400_STABLE to CI tests

* fix symfony/process

* add install option db-port

* add db-port cli option documentation

* Use pcov => xdebug => phpdbg for phpunit code coverage

Right now we are only using phpdbg for phpunit code coverage. And
it's causing some problems with latest (8.0, 8.1) php versions.

Also, since phpunit 8, its code coverage tool supports pcov, that
is the lighter and better alternative. And then, xdebug running
in coverage mode has become way better in recent versions.

So, with this patch applied, moodle-plugin-ci will look for the
"best" code coverage alternative (pcov => xdebug => phpdbg) in
every run.

This guarantees that existing automations, not having pcov or
xdebug available will continue fall-backing to phpdbg. But if
any of the 2 extensions are available, we'll be using them.

No matter of the above (fully automatic), it's also possible
to configure the desired code coverage tool with 3 new options,
in case it's needed to force any:
  - coverage-pcov
  - coverage-xdebug
  - coverage-phpdbg

Added support to the '--verbose' option to be passed to phpunit
(useful to debug options or see details about skipped tests).

Includes modifications to both GHA docs and template to show the ne

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,17 +5,19 @@ on: [push, pull_request, workflow_dispatch]
 jobs:
   selftest:
     name: CI test (make validate)
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
 
     steps:
     - name: Check out repository code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Setup PHP 7.3
       uses: shivammathur/setup-php@v2
       with:
         php-version: 7.3
-        coverage: none
+        # We want to verify that xdebug works for coverage. Once we only support
+        # Moodle 3.10/PHPUnit 8 and up, we can switch our tests to pcov too.
+        coverage: xdebug
 
     - name: Initialise
       run: make init
@@ -24,13 +26,13 @@ jobs:
       run: make validate
 
   citest:
-    name: CI test
+    name: Integration tests
     needs: selftest
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
 
     services:
       postgres:
-        image: postgres:10
+        image: postgres:13
         env:
           POSTGRES_USER: 'postgres'
           POSTGRES_HOST_AUTH_METHOD: 'trust'
@@ -43,8 +45,12 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - php: '7.4'
+          - php: '8.0'
             moodle-branch: 'master'
+          - php: '7.4'
+            moodle-branch: 'MOODLE_401_STABLE'
+          - php: '7.4'
+            moodle-branch: 'MOODLE_400_STABLE'
           - php: '7.4'
             moodle-branch: 'MOODLE_311_STABLE'
           - php: '7.4'
@@ -53,21 +59,20 @@ jobs:
             moodle-branch: 'MOODLE_39_STABLE'
           - php: '7.4'
             moodle-branch: 'MOODLE_38_STABLE'
-          - php: '7.2'
-            moodle-branch: 'MOODLE_35_STABLE'
-          - php: '7.0'
-            moodle-branch: 'MOODLE_35_STABLE'
 
     steps:
     - name: Check out repository code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Setup PHP ${{ matrix.php }}
       uses: shivammathur/setup-php@v2
       with:
         php-version: ${{ matrix.php }}
         extensions: pgsql, zip, gd, xmlrpc, soap
-        coverage: none
+        ini-values: max_input_vars=5000
+        # We want to verify that xdebug works for coverage. Once we only support
+        # Moodle 3.10/PHPUnit 8 and up, we can switch our tests to pcov too.
+        coverage: xdebug
 
     - name: Initialise moodle-plugin-ci
       run: |
@@ -101,10 +106,8 @@ jobs:
         moodle-plugin-ci validate
         moodle-plugin-ci savepoints
         moodle-plugin-ci mustache
-        moodle-plugin-ci grunt ||  [ \
-            "$MOODLE_BRANCH" != 'master' -a \
-            "$MOODLE_BRANCH" != 'MOODLE_400_STABLE' ]
+        moodle-plugin-ci grunt || [ "$MOODLE_BRANCH" == 'MOODLE_38_STABLE' ]
         moodle-plugin-ci phpdoc
-        moodle-plugin-ci phpunit --verbose --coverage-text
+        moodle-plugin-ci phpunit --verbose --coverage-text --fail-on-warning
         moodle-plugin-ci behat --profile default
         moodle-plugin-ci behat --profile chrome
