--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,14 @@
 language: php
 
 addons:
-  postgresql: "10"
+  postgresql: "13"
+  apt:
+    packages:
+      - postgresql-13
+      - postgresql-client-13
 
 services:
   - mysql
-  - postgresql
   - docker
 
 cache:
@@ -13,19 +16,19 @@ cache:
     - $HOME/.composer/cache
     - $HOME/.npm
 
-php:
- - 7.4
-
 env:
   global:
+    - PGVER=13
     - IGNORE_PATHS=ignore
     - IGNORE_NAMES=ignore_name.php
     - MUSTACHE_IGNORE_NAMES=broken.mustache
     - DB=pgsql
-    - MOODLE_BRANCH=master
 
 before_install:
-  - phpenv config-rm xdebug.ini
+  - echo 'max_input_vars=5000' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
+  # We want to verify that xdebug works for coverage. Once we only support
+  # Moodle 3.10/PHPUnit 8 and up, we can switch our tests to pcov too.
+  # - phpenv config-rm xdebug.ini
   - make init
   # Mimic how a Moodle plugin would be run.
   - cp -R tests/Fixture/moodle-local_ci ../moodle-local_ci
@@ -43,8 +46,6 @@ install:
   - moodle-plugin-ci install -vvv
 
 script:
-  - make test-phpunit
-
   # This is basically "integration" testing.
   - moodle-plugin-ci phplint
   - moodle-plugin-ci phpcpd
@@ -53,26 +54,30 @@ script:
   - moodle-plugin-ci validate
   - moodle-plugin-ci savepoints
   - moodle-plugin-ci mustache
-  - moodle-plugin-ci grunt || [ \
-        "$MOODLE_BRANCH" != 'master' -a \
-        "$MOODLE_BRANCH" != 'MOODLE_311_STABLE' -a \
-        "$MOODLE_BRANCH" != 'MOODLE_310_STABLE' -a \
-        "$MOODLE_BRANCH" != 'MOODLE_39_STABLE' ]
+  - moodle-plugin-ci grunt || [ "$MOODLE_BRANCH" == 'MOODLE_38_STABLE' ]
   - moodle-plugin-ci phpdoc
-  - moodle-plugin-ci phpunit --coverage-text
+  - moodle-plugin-ci phpunit --verbose --coverage-text --fail-on-warning
   - moodle-plugin-ci behat --profile default
   - moodle-plugin-ci behat --profile chrome
 
 jobs:
   include:
-    - stage: Tests
+    - stage: CI test (make validate)
       php: 7.3
       before_install: skip
       install:
         - make init
       script:
         - make validate
+
     - stage: Integration tests
+      if: env(MOODLE_BRANCH) IS present
+    - php: 8.0
+      env: MOODLE_BRANCH=master
+    - php: 7.4
+      env: MOODLE_BRANCH=MOODLE_401_STABLE
+    - php: 7.4
+      env: MOODLE_BRANCH=MOODLE_400_STABLE
     - php: 7.4
       env: MOODLE_BRANCH=MOODLE_311_STABLE
     - php: 7.4
@@ -81,7 +86,3 @@ jobs:
       env: MOODLE_BRANCH=MOODLE_39_STABLE
     - php: 7.4
       env: MOODLE_BRANCH=MOODLE_38_STABLE
-    - php: 7.2
-      env: MOODLE_BRANCH=MOODLE_35_STABLE
-    - php: 7.0
-      env: MOODLE_BRANCH=MOODLE_35_STABLE
