--- a/composer.json
+++ b/composer.json
@@ -39,24 +39,12 @@
     {
       "type": "package",
       "package": {
-        "name": "moodlehq/moodle-local_codechecker",
-        "version": "3.0.6",
-        "source": {
-          "url": "https://github.com/moodlehq/moodle-local_codechecker.git",
-          "type": "git",
-          "reference": "v3.0.6"
-        }
-      }
-    },
-    {
-      "type": "package",
-      "package": {
         "name": "moodlehq/moodle-local_ci",
-        "version": "1.0.12",
+        "version": "1.0.15",
         "source": {
           "url": "https://github.com/moodlehq/moodle-local_ci.git",
           "type": "git",
-          "reference": "v1.0.12"
+          "reference": "v1.0.15"
         }
       }
     },
@@ -64,21 +52,22 @@
       "type": "package",
       "package": {
         "name": "moodlehq/moodle-local_moodlecheck",
-        "version": "1.0.9",
+        "version": "1.1.2",
         "source": {
           "url": "https://github.com/moodlehq/moodle-local_moodlecheck.git",
           "type": "git",
-          "reference": "v1.0.9"
+          "reference": "v1.1.2"
         }
       }
     }
   ],
   "require": {
     "php": ">=7.0.8",
-    "moodlehq/moodle-local_codechecker": "^3.0.6",
-    "moodlehq/moodle-local_ci": "^1.0.12",
-    "moodlehq/moodle-local_moodlecheck": "^1.0.9",
+    "moodlehq/moodle-cs": "^3.2.3",
+    "moodlehq/moodle-local_ci": "^1.0.15",
+    "moodlehq/moodle-local_moodlecheck": "^1.1.2",
     "sebastian/phpcpd": "^3.0",
+    "sebastian/version": "^2.0.1",
     "phpmd/phpmd": "^2.2",
     "symfony/dotenv": "^3.4",
     "symfony/filesystem": "^3.4",
@@ -101,6 +90,9 @@
   "config": {
     "platform": {
       "php": "7.0.8"
+    },
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
     }
   },
   "autoload": {
@@ -121,7 +113,6 @@
     "post-update-cmd": "@local-ci-install",
     "post-create-project-cmd": "@local-ci-install",
     "local-ci-install": [
-      "@composer remove --no-update --working-dir=vendor/moodlehq/moodle-local_ci squizlabs/php_codesniffer",
       "@composer update --prefer-dist --optimize-autoloader --working-dir=vendor/moodlehq/moodle-local_ci",
       "cd vendor/moodlehq/moodle-local_ci && npm install --no-progress"
     ]
