--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -132,7 +132,8 @@ jobs:
         moodle-plugin-ci phplint
         moodle-plugin-ci phpcpd
         moodle-plugin-ci phpmd
-        moodle-plugin-ci codechecker
+        moodle-plugin-ci phpcs
+        moodle-plugin-ci phpcbf
         moodle-plugin-ci validate
         moodle-plugin-ci savepoints
         moodle-plugin-ci mustache
