--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,10 +15,10 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v3
 
-      - name: Setup PHP 7.3
+      - name: Setup PHP 7.4
         uses: shivammathur/setup-php@v2
         with:
-          php-version: 7.3
+          php-version: 7.4
           ini-values: phar.readonly = false
 
       - name: Build PHAR
@@ -26,11 +26,20 @@ jobs:
           make build
           php build/moodle-plugin-ci.phar list
 
+      - name: Extract release notes from changelog
+        id: extract-release-notes
+        uses: yashanand1910/standard-release-notes@v1.3.0
+        with:
+          changelog_path: docs/CHANGELOG.md
+          version: ${{ github.ref }}
+
       - name: Create Release
         uses: ncipollo/release-action@v1
         with:
           artifacts: build/moodle-plugin-ci.phar
           artifactContentType: application/zip
           body: |
-            Take a look at the [CHANGELOG](https://moodlehq.github.io/moodle-plugin-ci/CHANGELOG.html) for details about the release.
+            ${{ steps.extract-release-notes.outputs.release_notes }}
+            #
+            Take a look at the [CHANGELOG](https://moodlehq.github.io/moodle-plugin-ci/CHANGELOG.html) for details about other releases.
             Please follow [3.0 Upgrade guide](https://moodlehq.github.io/moodle-plugin-ci/UPGRADE-3.0.html) when upgrading from 2.x.
